--- a/style.css
+++ b/style.css
@@ -1,3 +1,57 @@
 #root {
   color: red;
 }
+
+body{
+  background-color: rgb(172, 168, 164);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 3rem;
+  margin-top: 2rem;
+}
+
+.title-of-episode{
+
+  height: 3rem;
+  border-radius: 0.3rem;
+  width: 100%;
+  background-color: rgb(73, 73, 73);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.card{
+  width: 15rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 0.5rem;
+  background-color: rgb(234, 234, 234);
+  min-height: 20rem;
+  border: solid rgb(73, 73, 73) 0.01rem;
+}
+
+.img{
+  max-width: 100%;
+  width: 13rem;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.description-eposode{
+  margin: 1rem;
+  text-align: justify;
+}
+
+#main-div{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap:2rem
+}
+
+
