--- a/style.css
+++ b/style.css
@@ -12,19 +12,21 @@ body{
   margin-top: 2rem;
 }
 
-#searchbar-wraper{
+#searchbar-wraper {
   display: flex;
-  flex-direction: row;
-  gap: 2rem;
+  flex-direction:row;
+  gap: 1rem;
   align-items: center;
   justify-content: center;
+
   width: 100%;
 }
 
-#select-episodes{
+#select-episodes, #select-tv-show{
   border: solid rgb(73, 73, 73) 0.01rem;
   border-radius: 0.5rem;
   height: 2rem;
+  width: 15rem;
   padding: 0 0.5rem;
 }
 
@@ -47,7 +49,7 @@ width: 1.5rem;
 margin-left: 0.3rem;
 }
 
-form {
+section {
   border-radius: 0.5rem;
   height: 2rem;
   text-align: end;
@@ -61,15 +63,16 @@ form {
 
 .title-of-episode{
 
+  max-height: 5rem;
   height: 3rem;
   border-radius: 0.3rem;
   width: 100%;
   background-color: rgb(73, 73, 73);
   color: white;
   display: flex;
-  justify-content: center;
-  align-items: center;
   text-align: center;
+  flex-direction: column;
+  line-height: 0.1rem;
 }
 
 .card{
