--- a/style.css
+++ b/style.css
@@ -3,36 +3,44 @@
 }
 
 body{
-  background-color: rgb(172, 168, 164);
+  background-color: rgb(0, 0, 0);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 3rem;
-  margin-top: 2rem;
+
 }
 
-#searchbar-wraper {
+#select-wraper {
   display: flex;
   flex-direction:row;
   gap: 1rem;
   align-items: center;
   justify-content: center;
-
   width: 100%;
 }
 
 #select-episodes, #select-tv-show{
-  border: solid rgb(73, 73, 73) 0.01rem;
-  border-radius: 0.5rem;
+  border: solid rgb(93, 93, 93) 0.02rem;
+  background-color: rgb(196, 84, 24);
+  color: rgb(255, 255, 255);
+  border-radius: 0.2rem;
   height: 2rem;
   width: 15rem;
   padding: 0 0.5rem;
 }
 
+.counter{
+  color: rgb(196, 84, 24);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.8rem;
+}
+
 #search{
-  border: solid rgb(73, 73, 73) 0.01rem;
-  border-radius: 0.5rem;
+  border: solid rgb(93, 93, 93) 0.01rem;
+  background-color: rgb(93, 93, 93);
+  border-radius: 0.2rem;
   height: 2rem;
   text-align: end;
   width: 100%;
@@ -40,7 +48,8 @@ body{
 }
 
 .logo_image{
-  width: 30%;
+  width: 100%;
+  margin:  0 auto;
 }
 
 #input_img{
@@ -50,10 +59,9 @@ margin-left: 0.3rem;
 }
 
 section {
-  border-radius: 0.5rem;
   height: 2rem;
   text-align: end;
-  width: 50%;
+  width: 70%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -63,16 +71,16 @@ section {
 
 .title-of-episode{
 
-  max-height: 5rem;
-  height: 3rem;
-  border-radius: 0.3rem;
+  min-height: 3rem;
+  border-radius: 0.1rem;
   width: 100%;
-  background-color: rgb(73, 73, 73);
-  color: white;
+  background-color: rgb(196, 84, 24);
+  color: rgb(255, 255, 255);
   display: flex;
   text-align: center;
-  flex-direction: column;
-  line-height: 0.1rem;
+  justify-content: center;
+  flex-direction: line;
+
 }
 
 .card{
@@ -80,9 +88,11 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 0.5rem;
-  background-color: rgb(234, 234, 234);
+  border-radius: 0.2rem;
+  background-color: rgb(214, 214, 214);
   min-height: 20rem;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.8rem;
   
   border: solid rgb(73, 73, 73) 0.01rem;
 }
@@ -97,6 +107,8 @@ section {
 .description-episode{
   margin: 1rem;
   text-align: justify;
+  font-size: 0.8rem;
+  font-weight: 300;
 }
 
 #main-div{
