--- a/style.css
+++ b/style.css
@@ -145,13 +145,16 @@ padding-right: 0.8rem;
 .TVShow-main-holder{
   font-family: 'Montserrat', sans-serif;
   width: 80%;
-  background-color: rgb(67, 67, 67, 20);
+  background-color: rgba(126, 126, 126, 0.3);
   border-radius: 0.3rem;
+  border: solid rgb(104, 104, 104) 0.05rem;
 }
 
 .TVShow-Card-Header{
   margin-left: 1rem;
-  color: white;
+  color: rgb(196, 84, 24);
+  font-size: 1.2rem
+
 
 }
 
@@ -184,21 +187,24 @@ padding-right: 0.8rem;
 
 .tvShow-info-card{
   min-width: 15rem;
-  background-color: rgb(196, 84, 24);
+
   margin-right: 1rem;
   border-radius: 0.3rem;
-  color: white;
+  color: rgb(64, 64, 64);
   font-size: 0.8rem;
   height: 13rem;
-
+  background-color: rgb(255, 255, 255, 20%);
+  border: solid rgb(255, 255, 255) 0.03rem;
   
 
 }
 
 .info-card-list{
   margin: 1rem;
-
-
+  color: rgb(0, 0, 0);
+  font-size: 0.8rem;
 }
+
+
 
 
