--- a/style.css
+++ b/style.css
@@ -237,5 +237,21 @@ padding-right: 0.8rem;
 
 }
 
+.go-back-button{
+  border: solid rgb(255, 255, 255) 0.07rem;
+  background-color: rgba(255, 255, 255, 0.047);
+  border-radius: 2rem;
+  height: 2.6rem;
+  text-decoration: none;
+  text-align: start;
+  width: 10rem;
+  text-align: center;
+  position: relative;
+  color:rgb(255, 255, 255);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.8rem;
+
+}
+
 
 
